--- a/Style/styles.css
+++ b/Style/styles.css
@@ -3,7 +3,7 @@ body{
     font-family: "Inter", sans-serif;
     /* max-width: 1440px; */
     margin: 0 auto;
-    /* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); */
+    background: black;
 }
 *{
     margin: 0;
@@ -11,6 +11,16 @@ body{
     box-sizing: border-box;
 }
 /* Shared Styles Start */
+.section-title{
+    font-size: 3rem;
+    font-weight: 900;
+    color: rgb(255, 255, 255);
+}
+.section-description{
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
 .bg-primary{
     background: rgb(230, 83, 60);
     width: 92px;
@@ -32,6 +42,10 @@ body{
     font-weight: 600;
     color: rgb(255, 255, 255);
 }
+.box{
+    width: 231px;
+    height: 270px;
+}
 /* Header Styles Start */
 header{
     background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(8, 3, 3, 0.993) 100%);
@@ -44,7 +58,7 @@ header{
 } */
 /* Navbar Styles Start */
 .navbar-main{
-    max-width: 1060px;
+    /* max-width: 1060px; */
     display: flex;
     margin: 0 200px;
     justify-content: space-between;
@@ -123,6 +137,78 @@ header{
 .banner-img{
     margin-right: 80px;
 }
+/* Change Your Habits style here */
+.change-your-habits-container{
+    width: 1044px;
+    height: 452px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.change-your-habits-content{
+    text-align: center;
+}
+.section-description{
+    margin-top: 15px;
+    line-height: 1.5rem;
+}
+.change-your-habits-2nd-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 59px;
+}
+.section-img{
+    border: 1px solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    border-radius: 50%;
+    margin-left: 23px;
+}
+.title{
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    margin-top: 20px;
+}
+.description{
+    font-size: 0.8rem;
+    font-weight: 400px;
+    line-height: 1.125rem;
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    margin-top: 5px;
+}
+/* Run an Extra Mile styles here */
+.run-an-extra-container{
+    width: 1060px;
+    height: 371px;
+    background: rgb(34, 34, 34);
+    border-radius: 18px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.run-an-extra-content{
+    width: 443px;
+    height: 290px;
+    margin-left: 54px;
+    padding-top: 42px;
+}
+.btn-join{
+    margin-top: 34px;
+}
+/* .run-img{
+    max-width: 366px;
+    max-height: 312px;
+    border: 1px solid red;
+} */
+.run-img{
+    max-width: 450px;
+    max-height: 312px;
+    border-radius: 18px;
+    margin-top: 40px;
+    margin-right: 32px;
+}
  /* Media Query for small device */
  @media screen and (max-width: 576px) {
     .hamburger-icon{
@@ -132,9 +218,9 @@ header{
     .nav-items{
         display: none;
     }
-    /* .nav-title{
-        margin-right: 250px;
-    } */
+    .nav-title{
+        /* margin-right: 250px; */
+    }
     .navbar-main{
         flex-direction: column;
         padding-top: 30px;
